--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: false
 language: scala
 scala:
-- "2.11.5"
+  - "2.11.7"
 script:
-  - sbt clean coverage test
+  - sbt clean coverage intervalsetJVM/test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
   - sbt coveralls
